kubernetes/documenterator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: documenterator
  namespace: documenterator
