kubernetes/docstreamftontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -n documenterator
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: docstreamftontend
  name: docstreamftontend
  namespace: documenterator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docstreamftontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -n documenterator
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/streamlist-tutorial-default: "true"
        io.kompose.service: docstreamftontend
    spec:
      containers:
        - image: guestros/aidocs-streamlit-frontend:latest
          imagePullPolicy: Always
          name: docstreamftontend
          ports:
            - containerPort: 8501
              hostPort: 8501
              protocol: TCP
      restartPolicy: Always
