kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

    # nginx.ingress.kubernetes.io/auth-url: "https://oauth.k8s.datafortress.cloud/oauth2/auth"
    # nginx.ingress.kubernetes.io/auth-signin: "https://oauth.k8s.datafortress.cloud/oauth2/start?rd=$scheme%3A%2F%2F$host$escaped_request_uri"
    # nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-groups, x-auth-request-email"

    # nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
  labels:
    app: docstreamftontend
  name: nginx
  namespace: documenterator
spec:
  ingressClassName: nginx
  rules:
  - host: streamdocs.k8s.datafortress.cloud
    http:
      paths:
      - backend:
          service:
            name: docstreamftontend
            port:
              number: 8501
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - streamdocs.k8s.datafortress.cloud
    secretName: ske-executor-tls
